# 14_VCMWaterWatch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.deploy.yml  docker-compose.yml  justfile  pyproject.toml  run-lint-staged-if-webapp.sh
.github/: CODEOWNERS
.github/workflows/: python-tests.yaml
.husky/: pre-commit
data/: TODO
data/export/: data_countries.pmtiles
data/staging/: README.md
deploy/: Dockerfile  docker-compose.yml
docs/: data_model.md  nocodb.md
pipelines/: .gitignore  README.md  conftest.py  justfile
pipelines/common/: db_helper.py  db_helper_example.py  nocodb_swagger.json  services.py
pipelines/export/: README.md  export_pmtiles.py
pipelines/extract/: README.md  de_wasserportal.py  download_municipalities.py  geojson.py  justfile
pipelines/import_geojson/: README.md  config.py  download_municipalities.py  import_geojson.py  workflow.py
pipelines/load/: README.md  justfile  load_water_companies.py  load_zones.py
pipelines/load_water_companies/: download_de_wasserportal.py  load_water_companies.py
pipelines/load_zones/: README.md  config.py  import_geojson.py  load_zones.py
pipelines/tasks/: README.md  calculate_distribution_zone.py  clean_blank_actors.py  justfile
pipelines/tests/: __init__.py
pipelines/transform/: README.md  config.py  create_distribution_zones.py  geojson.py  (+1 more)
tools/: init_nocodb.sh
webapp/: .env.example  .gitignore  .lintstagedrc  .prettierrc.json  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
(+62 files in other folders)
