[project]
name = "14_vcm_water_watch"
version = "0.1.0"
description = "Prefect workflows for VCM Water Watch"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.6.6",
    "polars>=1.22.0",
    "geojson>=3.2.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pyogrio>=0.12.1",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
